Finish text additions

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -42,7 +42,8 @@
                 <div class="d-flex justify-content-between">
                     <h5>Select a group.</h5>
                     <div>
-                        <button class="btn btn-primary gr-copy-button" title="Copy randomized data to clipboard">&#128203;</button>
+                        <button class="btn btn-primary gr-copy-button"
+                            title="Copy randomized data to clipboard">&#128203;</button>
                     </div>
                 </div>
                 <div class="row">
@@ -69,9 +70,7 @@
                         <h6>Group members</h6>
                         <div class="list-group">
                             <div class="list-group-item">
-                                <div id="gr_existing_members" class="row">
-
-                                </div>
+                                <div id="gr_existing_members" class="row"> </div>
                             </div>
                             <form id="gr_add_member_form"
                                 class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
@@ -164,7 +163,8 @@
                     <div>
                         <button id="gr_btn_regenerate" class="btn btn-primary"
                             title="Regenerate a random order">&#128472;</button>
-                        <button class="btn btn-primary gr-copy-button" title="Copy randomized data to clipboard">&#128203;</button>
+                        <button class="btn btn-primary gr-copy-button"
+                            title="Copy randomized data to clipboard">&#128203;</button>
                     </div>
                 </div>
                 <div class="d-flex justify-content-between">
