Improve cookie warning style

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -19,17 +19,19 @@
 </head>
 
 <body class="bg-dark">
-    <div class="container-fluid py-3">
-        <div id="ck_container_cookie" class="alert alert-danger fixed-top m-2" role="alert">
-            <div class="d-flex justify-content-between">
-                <p class="m-0">This site uses cookies to improve your user experience.</p>
-                <div class="btn-group btn-group-sm" role="group">
-                    <button id="ck_btn_reject" type="button" class="btn btn-danger">Reject</button>
-                    <button id="ck_btn_accept" type="button" class="btn btn-success">Accept</button>
-                </div>
-            </div>
-        </div>
+	<div id="ck_container_cookie" class="fixed-top fixed-bottom">
+		<div class="alert alert-danger fixed-top m-2" role="alert">
+			<div class="d-flex justify-content-between">
+				<p class="m-0">This site uses cookies to improve your user experience.</p>
+				<div class="btn-group btn-group-sm" role="group">
+					<button id="ck_btn_reject" type="button" class="btn btn-danger">Reject</button>
+					<button id="ck_btn_accept" type="button" class="btn btn-success">Accept</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
+    <div class="container-fluid py-3">
         <div class="jumbotron bg-info">
             <h1 class="display-4"><span id="rg-title">Group Randomizer</span></h1>
         </div>
