Fix page refresh on pressing enter #18

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -55,8 +55,7 @@
                             <div class="list-group-item">
                                 There are currently no groups
                             </div>
-                            <form id="gr_add_group_form" action="#"
-                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
+                            <form action="#" id="gr_add_group_form" class="list-group-item list-group-item-action bg-secondary text-light gr-always-there" method="GET" onsubmit="return false;">
                                 <div class="form-row">
                                     <div class="col-xl-9 col-lg-8 col-md-7 col-7">
                                         <input id="gr_new_group_name" type="text" placeholder="Group name"
@@ -74,8 +73,7 @@
                             <div class="list-group-item">
                                 <div id="gr_existing_members" class="row"> </div>
                             </div>
-                            <form id="gr_add_member_form"
-                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
+                            <form action="#" id="gr_add_member_form" class="list-group-item list-group-item-action bg-secondary text-light gr-always-there" method="GET" onsubmit="return false;">
                                 <div class="form-row">
                                     <div class="col-xl-10 col-lg-9 col-md-7 col-7">
                                         <input id="gr_new_member_name" type="text" placeholder="Member name"
@@ -105,8 +103,7 @@
                     <div class="col-md-4 mt-2">
                         <h6>Beginning</h6>
                         <div id="gr_div_list_prefixes" class="list-group">
-                            <form
-                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
+                            <form action="#" class="list-group-item list-group-item-action bg-secondary text-light gr-always-there" method="GET" onsubmit="return false;">
                                 <div class="form-row">
                                     <div class="col-xl-9 col-lg-8 col-md-7 col-7">
                                         <input id="gr_input_prefix" type="text" placeholder="Custom prefix"
@@ -121,8 +118,7 @@
                     <div class="col-md-4 mt-2">
                         <h6>Separator</h6>
                         <div id="gr_div_list_separators" class="list-group">
-                            <form
-                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
+                            <form action="#" class="list-group-item list-group-item-action bg-secondary text-light gr-always-there" method="GET" onsubmit="return false;">
                                 <div class="form-row">
                                     <div class="col-xl-9 col-lg-8 col-md-7 col-7">
                                         <input id="gr_input_separator" type="text" placeholder="Custom separator"
@@ -137,8 +133,7 @@
                     <div class="col-md-4 mt-2">
                         <h6>Ending</h6>
                         <div id="gr_div_list_postfixes" class="list-group">
-                            <form
-                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
+                            <form action="#" class="list-group-item list-group-item-action bg-secondary text-light gr-always-there" method="GET" onsubmit="return false;">
                                 <div class="form-row">
                                     <div class="col-xl-9 col-lg-8 col-md-7 col-7">
                                         <input id="gr_input_postfix" type="text" placeholder="Custom postfix"
@@ -194,7 +189,7 @@
                             stand up meeting.
                         </p>
                         <p>Find the project sources at <a href="https://github.com/noxone/group-randomizer"
-                                target="_blank">Github</a>
+                                target="_blank">GitHub</a>
                         </p>
                     </div>
                     <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
