--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -68,7 +68,13 @@
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-7 col-md-6 mt-2">
-                        <h6>Group members</h6>
+                        <div class="d-flex justify-content-between">
+                            <h6 style="display:inline-block">Group members</h6>
+                            <div id="gr_member_count_container">
+                                <span id="gr_selected_member_counter">5</span>
+                                <span>selected</span>
+                            </div>
+                        </div>
                         <div class="list-group">
                             <div class="list-group-item">
                                 <div id="gr_existing_members" class="row"> </div>
