User kotlinx-serialization for JSON encoding

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,6 +12,7 @@
     <!-- include kotlin runtime -->
     <script type="text/javascript" src="lib/kotlin.js"></script>
     <script type="text/javascript" src="lib/kotlinx-html-js.js"></script>
+    <script type="text/javascript" src="lib/kotlinx-serialization-kotlinx-serialization-core-jsLegacy.js"></script>
 
     <link rel="stylesheet" href="group-randomizer.css">
 
