Add links to select all/ none members

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -74,6 +74,10 @@
                             <div id="gr_member_count_container">
                                 <span id="gr_selected_member_counter">5</span>
                                 <span>selected</span>
+                                <span>-</span>
+                                <a id="gr_select_all_members" href="#" title="Select all members.">all</a>
+                                <span>-</span>
+                                <a id="gr_deselect_all_members" href="#" title="Deselect all members.">none</a>
                             </div>
                         </div>
                         <div class="list-group">
