--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="lib/kotlin.js"></script>
     <script type="text/javascript" src="lib/kotlinx-html-js.js"></script>
     <script type="text/javascript" src="lib/kotlinx-serialization-kotlinx-serialization-core-jsLegacy.js"></script>
+    <script type="text/javascript" src="lib/kotlinx-serialization-kotlinx-serialization-json-jsLegacy.js"></script>
 
     <link rel="stylesheet" href="group-randomizer.css">
 
