--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -8,11 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 
     <!-- Meta Tags requred for Progressive Web App -->
-    <meta name="apple-mobile-web-app-status-bar" content="#aa7700"> 
+    <meta name="apple-mobile-web-app-status-bar" content="#212529"> 
     <meta name="theme-color" content="black"> 
     <link rel="manifest" href="manifest.json"> 
 
     <title>Group Randomizer</title>
+
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
     <!-- Bootstrap CSS -->
